--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,13 @@
         <artifactId>junit</artifactId>
         <version>4.11</version>
     </dependency>
-</dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
     <name>Movies</name>
 </project>
 
