--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <version>2.44.0</version>
         </dependency>
         <dependency>
+	<groupId>javax.validation</groupId>
+	<artifactId>validation-api</artifactId>
+	<version>1.0.0.GA</version>
+</dependency>
+
+        <dependency>
             <groupId>com.opera</groupId>
             <artifactId>operadriver</artifactId>
             <scope>test</scope>
